# fost-hello

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
.circleci/: config.yml
hello/: compile
hello/Cpp/hello/: CMakeLists.txt
hello/Cpp/hello-lib/: CMakeLists.txt  hello-text-tests.cpp  hello-text.cpp
